Updated in preparation for Spotify Web API Java Wrapper 10.0.0
Also a lot of code maturity and cleanup while I was at it. In particular, isLiveRelease needed a big retooling after the deprecation of Audio Features.